--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ locale: en_US
 description: Describe your website here.
 logo: site-logo.png
 search: true
+baseurl: "/ebdi"
 # url: http://localhost:4000
 
 # Jekyll configuration
