--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Describe your website here.
 logo: site-logo.png
 search: true
 baseurl: "/ebdi"
-# url: http://localhost:4000
+url: http://localhost:4000
 
 # Jekyll configuration
 
